DESIGN - Fix h3 not standing out on mobile

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -40,7 +40,7 @@ h2 {
 }
 
 h3 {
-  @apply text-2xl font-light sm:text-4xl;
+  @apply text-2xl font-bold sm:text-4xl sm:font-light;
   @apply mt-12 mb-6;
 }
 
